working on navbar section

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+body{
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+  
+}
+
+.container {
+    width: 90%;
+    margin:auto
+}
+
+
+/* top bar */
+
+
+.link:hover{color: #ff5252;}
