--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 
+*{margin: 0px; padding: 0px; box-sizing: border-box;}
 
 body{
     font-family: "Montserrat", sans-serif;
