90% work is complete on navbar

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -16,8 +16,8 @@ body{
     margin:auto
 }
 
-
 /* top bar */
-
-
 .link:hover{color: #ff5252;}
+
+/* navbar cart color */
+.MuiBadge-badge{background-color: #ff5252 !important;}
